# ArciumHyde

./: .gitignore  Anchor-build.json  Anchor.toml  Cargo.toml  DEPLOYMENT.md  README.md  SUBMISSION_SUMMARY.md  composability_plan.md  package-lock.json  package.json
client/: jest.config.js  package-lock.json  package.json  tailwind.config.ts
client/src/components/: BalanceThresholdProof.tsx  Button.test.tsx  Button.tsx  Card.tsx  Header.tsx  Layout.tsx  LoginBubble.tsx  MPCExample.tsx  Notification.tsx  ZkProofGenerator.tsx
client/src/pages/: _document.tsx  advanced-privacy-demo.tsx  dashboard.tsx  docs.tsx  how-to-use.tsx  (+5 more)
docs/: api-reference.md  architecture.md  composability-framework.md  core-concepts.md  getting-started.md  index.md  lazy-decryption-system.md  navigation.md  onboarding.md  playground.md  security-best-practices.md  structure.md  troubleshooting.md  tutorials.md
programs/: Cargo.toml
programs/arcium_encrypted_compute/src/: lib.rs  lib.rs.bak
scripts/: run-benchmarks.ts
sdk/: README.md  jest.config.js  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
sdk/docs/: quickstart.md
sdk/examples/: age-verification.js  balance-verification.js  data-encryption.js  sdk-sandbox.html
sdk/src/: client.ts  errors.ts  index.ts
sdk/tests/: sdk.test.ts
sdk/types/: index.ts
server/: jest.config.js  package-lock.json  package.json  tsconfig.json
server/docs/: api-reference.md  interactive-playground.md
server/src/: server.ts
server/test/: integration.test.ts
tests/: arcium_encrypted_compute.rs  arcium_encrypted_compute.ts
(+76 files in other folders)
